# ctfi

./: CMakeLists.txt  ctf.py  ctf_job.py  ctf_test.py  run_on_bsds.py
spixel/: algorithm.py  block.py  energy.py  engine.py  superpixel.py  utils.py
src/: algorithm.cpp  algorithm.h  block.cpp  block.h  ctfi.cpp  ctfi.h  engine.cpp  engine.h  main.cpp  main2.cpp  origctf.cpp  origctf.h  superpixel.cpp  superpixel.h  utils.cpp  utils.h
